brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__extended_test__parse_extended_test_multiline_and.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -z ${a} &&\n\t-z ${b} ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: And(UnaryTest(StringHasZeroLength, Word(
                  value: "${a}",
                  loc: "[location]",
                )), UnaryTest(StringHasZeroLength, Word(
                  value: "${b}",
                  loc: "[location]",
                ))),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
