brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__extended_test__parse_extended_test_multiline_complex.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -z ${a} &&\n\t\t\t-z ${b} &&\n\t\t\t-z ${c} &&\n\t\t\t-z ${d} ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: And(And(And(UnaryTest(StringHasZeroLength, Word(
                  value: "${a}",
                  loc: "[location]",
                )), UnaryTest(StringHasZeroLength, Word(
                  value: "${b}",
                  loc: "[location]",
                ))), UnaryTest(StringHasZeroLength, Word(
                  value: "${c}",
                  loc: "[location]",
                ))), UnaryTest(StringHasZeroLength, Word(
                  value: "${d}",
                  loc: "[location]",
                ))),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
