brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__extended_test__parse_extended_test_or.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -f file || -d file ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: Or(UnaryTest(FileExistsAndIsRegularFile, Word(
                  value: "file",
                  loc: "[location]",
                )), UnaryTest(FileExistsAndIsDir, Word(
                  value: "file",
                  loc: "[location]",
                ))),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
