brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__extended_test__parse_extended_test_readable.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -r file ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: UnaryTest(FileExistsAndIsReadable, Word(
                  value: "file",
                  loc: "[location]",
                )),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
